--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78bde2">  <td>25/04/05 22:54:50</td>   <td>0</td> <td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:QATest.TestCase1@27462a88]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1265900909</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>25/04/05 22:49:24</td>   <td>-325760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.loginNaukri()[pri:0, instance:QATest.TestCase1@27462a88]">loginNaukri</td> 
-  <td>main@1265900909</td>   <td></td> </tr>
-<tr bgcolor="78bde2">  <td>25/04/05 22:49:20</td>   <td>-330611</td> <td title="&gt;&gt;BaseTest.setUpBrowser()[pri:0, instance:QATest.TestCase1@27462a88]">&gt;&gt;setUpBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1265900909</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>25/04/06 01:38:45</td>   <td>0</td> <td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:QATest.TestCase1@71a8adcf]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@364597300</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>25/04/06 01:37:24</td>   <td>-80297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.loginNaukri()[pri:0, instance:QATest.TestCase1@71a8adcf]">loginNaukri</td> 
+  <td>main@364597300</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>25/04/06 01:37:20</td>   <td>-84930</td> <td title="&gt;&gt;BaseTest.setUpBrowser()[pri:0, instance:QATest.TestCase1@71a8adcf]">&gt;&gt;setUpBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@364597300</td>   <td></td> </tr>
 </table>
